i. Task date input: * Renamed dateTodayDirective to dateInputDirective * Listen to date input blur event to switch to placeholder text if task has no date * Show date input instead of placeholder text if task has a date * Minimalistic date input CSS * Aligned date input (and placeholder) inside accordion with task title
ii. Edit item dialog header:
* New editHeaderDirective
* Transparent button CSS
* @normal-button-hover LESS variable

iii. Fix pull to next/previous week and date slide fixes:
* Removed transitionSpeed parameter from SwiperService's swipeTo method
* swipeToStaringDay method in DatesController animates swipe in other cases than initialization
* Moved Date slides' subtask initialization from DOM to watch method for active day
* Fixed broken date slides due to ngAnimate with tracking expression in weekdays' ngRepeat

iiii. Desktop menu crossfade in task slides

--- a/frontend/core/src/main/webapp/static/app/tasks/dates.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/dates.html
@@ -8,7 +8,7 @@
           <div id="pull-to-previous-week" class="week-loader">
             <span>previous week...</span>
           </div>
-          <div class="swiper-slide" ng-repeat="date in weekdays" swiper-slide="tasks/home/{{date.weekday}}" slide-index="$index" ng-init="subtask = getSubtask(date)">
+          <div class="swiper-slide" ng-repeat="date in weekdays track by date.weekdayIndex" swiper-slide="tasks/home/{{date.weekday}}" slide-index="$index">
             <div class="inner-slide-content-container">
               <section id="date" class="date">
                 <h3 class="date-heading" ng-hide="isDatepickerVisible" ng-click="setDatepickerVisible()">{{date.displayDate}}</h3>
