--- a/frontend/core/src/main/webapp/static/app/tasks/tasksSlides.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksSlides.html
@@ -2,12 +2,12 @@
 <div class="slides-container" ng-init="feature='tasks'; homeHeading='dates';" ng-controller="MainController" snap-drawer="tasks">
   <header class="page-header" ng-class="omnibarVisible && 'header-hidden'" ng-include="'static/app/main/pageHeader.html'"></header>
   <div class="swiper-container main-slides" swiper-container="tasks" swiper-type="main" expected-slides="3">
-    <div ng-hide="isDesktop && isMenuOpen" class="swiper-wrapper">
+    <div ng-hide="isDesktop && isMenuOpen" class="swiper-wrapper desktop-menu-animation">
       <div class="swiper-slide" swiper-slide="tasks/home" slide-index=0 ng-include="'static/app/tasks/dates.html'" snap-drawer-drag></div>
       <div class="swiper-slide" swiper-slide="tasks/overview" slide-index=1 ng-include="'static/app/tasks/overview.html'"></div>
       <div class="swiper-slide" swiper-slide="tasks/details" slide-index=2 ng-include="'static/app/tasks/details.html'"></div>
     </div>
-    <div id="desktop-menu" ng-if="isDesktop && isMenuOpen" ng-include="'static/app/auth/menu.html'"></div>
+    <div id="desktop-menu" class="desktop-menu-animation" ng-if="isDesktop && isMenuOpen" ng-include="'static/app/auth/menu.html'"></div>
   </div>
   <footer ng-if="!omnibarVisible" ng-include="'static/app/main/footer.html'"></footer>
 </div>
