Added line break between terms and privacy on about page

--- a/frontend/core/src/main/webapp/static/app/base/about.html
+++ b/frontend/core/src/main/webapp/static/app/base/about.html
@@ -10,7 +10,7 @@
             <span ng-bind="extendedMindVersion"></span>
           </li>
           <li class="simple-content">
-            <a class="highlighted-link" href ng-click="openTermsOfServiceModal()">terms of service</a>
+            <a class="highlighted-link" href ng-click="openTermsOfServiceModal()">terms of service</a><br/>
             <a class="highlighted-link" href ng-click="openPrivacyPolicyModal()">privacy policy</a>
           </li>
           <li id="about-help" class="simple-content">
