Switched from .otf to .ttf font to fix problem with vertical alignment

--- a/frontend/cordova/app/merges/android/index.html
+++ b/frontend/cordova/app/merges/android/index.html
@@ -28,13 +28,11 @@
     <style type="text/css">
     @font-face {
       font-family: 'HelveticaNeueLTStd-Lt';
-      src: url('static/fonts/HelveticaNeueLight.otf') format("opentype");
-      vertical-align: baseline !important;
+      src: url('static/fonts/HelveticaNeueLight.ttf') format("truetype");
     }
     @font-face {
       font-family: 'HelveticaNeueLT-Roman';
       src: url('static/fonts/HelveticaNeueRoman.ttf') format('truetype');
-      vertical-align: baseline !important;
     }
     </style>
 
