bugfix. task,note,item title bold in EDIT PAGE

--- a/frontend/core/src/main/webapp/static/app/main/editItem.html
+++ b/frontend/core/src/main/webapp/static/app/main/editItem.html
@@ -10,7 +10,7 @@
 
           <div class="form-group">
             <label class="sr-only" for="itemTitle">title</label>
-            <input type="text" class="simple-input" id="itemTitle" ng-model="item.title" placeholder="title..." maxlength="128" required>
+            <input type="text" class="simple-input font-bold" id="itemTitle" ng-model="item.title" placeholder="title..." maxlength="128" required>
           </div>
           <div class="form-group">
             <label class="sr-only" for="itemDescription">description</label>
