--- a/frontend/core/src/main/webapp/static/app/notes/editNote.html
+++ b/frontend/core/src/main/webapp/static/app/notes/editNote.html
@@ -10,7 +10,7 @@
 
           <div class="form-group">
             <label class="sr-only" for="noteTitle">title</label>
-            <input type="text" class="simple-input" id="noteTitle" ng-model="note.title" placeholder="title..." maxlength="128" required>
+            <input type="text" class="simple-input font-bold" id="noteTitle" ng-model="note.title" placeholder="title..." maxlength="128" required>
           </div>
           <div class="form-group">
             <label class="sr-only" for="noteDescription">content</label>
