--- a/frontend/core/src/main/webapp/static/app/tasks/editTask.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/editTask.html
@@ -9,7 +9,7 @@
 
             <div class="form-group">
               <label class="sr-only" for="taskTitle">title</label>
-              <input type="text" class="simple-input" id="taskTitle" ng-model="task.title" placeholder="title..." maxlength="128" required>
+              <input type="text" class="simple-input font-bold" id="taskTitle" ng-model="task.title" placeholder="title..." maxlength="128" required>
             </div>
             <div class="form-group">
               <label class="sr-only" for="taskDescription">description</label>
