Moved from Phonegap to Cordova also in naming

--- a/frontend/cordova/app/merges/android/index.html
+++ b/frontend/cordova/app/merges/android/index.html
@@ -38,7 +38,7 @@
 
     <link rel="stylesheet" href="static/css/em.css"/>
     <script>
-      var packaging = "android-phonegap";
+      var packaging = "android-cordova";
       var urlPrefix = 'https://ext.md';
       var html5Mode = false;
       var bindToFocusEvent = false;
