--- a/frontend/cordova/app/merges/ios/index.html
+++ b/frontend/cordova/app/merges/ios/index.html
@@ -26,7 +26,7 @@
     <title ng-bind="page.getTitle()"></title>
     <link rel="stylesheet" href="static/css/em.css"/>
     <script>
-      var packaging = "ios-phonegap";
+      var packaging = "ios-cordova";
       var urlPrefix = 'https://ext.md';
       var html5Mode = false;
       var bindToFocusEvent = false;
