--- a/frontend/core/src/main/webapp/static/app/main/editItem.html
+++ b/frontend/core/src/main/webapp/static/app/main/editItem.html
@@ -1,33 +1,25 @@
 <div class="no-slides-container" ng-controller="MainController">
-  <section id="edit-item" class="one-column-grid page" ng-controller="ItemsController">
-    <div class="column">
-      <header class="heading-header">
-        <h3 ng-if="item.uuid">edit item</h3>
-        <h3 ng-if="!item.uuid">new item</h3>
-      </header>
-      <div class="content-container simple-content-container">
-        <form role="form" name="itemEdit">
-
-          <div class="form-group">
-            <label class="sr-only" for="itemTitle">title</label>
-            <input type="text" class="simple-input font-bold" id="itemTitle" ng-model="item.title" placeholder="title..." maxlength="128" required>
-          </div>
-          <div class="form-group">
-            <label class="sr-only" for="itemDescription">description</label>
-            <textarea class="simple-input" id="itemDescription" ng-model="item.description" placeholder="description..." maxlength="1024" expanding-textarea></textarea>
-          </div>
-          <div class="form-group">
-            <label class="sr-only" for="itemLink">url</label>
-            <input type="text" class="simple-input" id="itemLink" ng-model="item.link" placeholder="url...">
-          </div>
-          <div class="form-group vertical-buttons">
-            <button type="submit" class="wide-button normal-button" ng-disabled="!itemEdit.$valid" ng-click="saveItem(item)">
-              save
-            </button>
-            <button type="button" class="wide-button cancel-button" ng-click="cancelEdit()">cancel</button>
-          </div>
-        </form>
+  <div id="edit-page" ng-controller="ItemsController">
+    <header class="edit-header" edit-header="item" item-edit-form="itemEdit" save-item="saveItem(item)" cancel-edit="cancelEdit()"></header>
+    <section id="edit-item" class="one-column-grid page">
+      <div class="column">
+        <div class="content-container simple-content-container">
+          <form role="form" name="itemEdit">
+            <div class="form-group">
+              <label class="sr-only" for="itemTitle">title</label>
+              <input type="text" class="simple-input font-bold" id="itemTitle" ng-model="item.title" placeholder="title..." maxlength="128" required>
+            </div>
+            <div class="form-group">
+              <label class="sr-only" for="itemDescription">description</label>
+              <textarea class="simple-input" id="itemDescription" ng-model="item.description" placeholder="description..." maxlength="1024" expanding-textarea></textarea>
+            </div>
+            <div class="form-group">
+              <label class="sr-only" for="itemLink">url</label>
+              <input type="text" class="simple-input" id="itemLink" ng-model="item.link" placeholder="url...">
+            </div>
+          </form>
+        </div>
       </div>
-    </div>
-  </section>
+    </section>
+  </div>
 </div>
